# taxmind-books

./: .env.example  .gitignore  CLAUDE.md  CONSTITUTION.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_users_companies.py  0002_ledgers.py  0003_vouchers.py  0004_audit_idempotency.py  0005_audit_logs_company_id_nullable.py  0006_connector_enrollment_codes.py  0007_voucher_optional_fields.py  0008_device_tokens.py  0009_account_deletion_requests.py  0010_voucher_pending_tally_post.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py  errors.py
backend/app/core/: __init__.py  audit.py  database.py  exceptions.py  idempotency.py  logging.py  money.py  security.py
backend/app/integrations/: __init__.py  apns_client.py  fcm_client.py
backend/app/models/: __init__.py  account_deletion_request.py  audit_log.py  base.py  company.py  connector_enrollment.py  device_token.py  idempotency_key.py  ledger.py  user.py  voucher.py
backend/app/schemas/: __init__.py  account.py  audit_log.py  auth.py  common.py  company.py  connector.py  dashboard.py  device.py  ledger.py  onboarding.py  reports.py  voucher.py
backend/app/services/: __init__.py  account_lifecycle_service.py  auth_service.py  company_service.py  connector_service.py  dashboard_service.py  ledger_service.py  notification_service.py  onboarding_service.py  voucher_groups.py  voucher_service.py
backend/app/workers/: __init__.py  celery_app.py  lifecycle_tasks.py  posting_tasks.py
backend/tests/: _db_fixtures.py  conftest.py
backend/tests/integration/: conftest.py  openapi_phase0.yaml  test_alembic_roundtrip.py  test_audit_log_append_only.py  test_connector_ws.py  test_error_envelope.py  test_health.py  test_idempotency_e2e.py  test_notification_dispatch.py  test_openapi_contract.py  test_tenancy_dependencies.py
backend/tests/tenant_isolation/: conftest.py  test_audit_logs_isolation.py  test_companies_isolation.py  test_ledgers_isolation.py  (+1 more)
connector/: pyproject.toml
connector/connector/: __init__.py  build_info.py  config.py  envelope.py  idempotency_cache.py  main.py  message_handlers.py  tally_client.py  ws_client.py
connector/installer/: README.md  build_exe.py
(+179 files in other folders)
