[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "taxmind-books-backend"
version = "0.1.0"
description = "TaxMind Books — backend API and workers"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "CMA Gaurav Chandaliya" }]
dependencies = [
  "fastapi>=0.115,<0.117",
  "uvicorn[standard]>=0.32,<0.34",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "sqlalchemy>=2.0.36,<2.1",
  "psycopg[binary]>=3.2,<4",
  "alembic>=1.13,<2",
  "python-json-logger>=2.0.7,<3",
  "httpx>=0.27,<0.29",
  "bcrypt>=4.2,<5",
  "pyjwt>=2.10,<3",
  "email-validator>=2.2,<3",
  "python-multipart>=0.0.18,<0.1",
  "celery>=5.4,<6",
  "redis>=5.1,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.25",
  "pytest-cov>=5.0,<7",
  "ruff>=0.6.9,<0.8",
  "mypy>=1.13,<2",
  "pyyaml>=6.0,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
  "unit: pure-function tests (no DB)",
  "integration: tests requiring DB or services",
  "tenant_isolation: multi-tenant safety tests",
  "golden: golden-output fixture tests",
]
