[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "taxmind-books-connector"
version = "0.1.0"
description = "TaxMind Books — Tally Desktop Connector"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "CMA Gaurav Chandaliya" }]
dependencies = [
  "httpx>=0.27,<0.29",
  "websockets>=13.0,<15",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "pyjwt>=2.10,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.25",
  "pytest-httpx>=0.30,<0.36",
  "ruff>=0.6.9,<0.8",
  "mypy>=1.13,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["connector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
  "unit: pure-function tests",
  "integration: tests requiring live services",
]
